force-app/main/default/objects/Employee__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
            <value>
                <fullName>4years</fullName>
            </value>
            <value>
                <fullName>Fresher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>